--- a/device/GUI/h_ref_add.ui
+++ b/device/GUI/h_ref_add.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: #ffffff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="title">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -38,36 +38,25 @@ background-color: rgba(0,0,0,00)</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QPushButton" name="add_item_minus">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>144</y>
-      <width>97</width>
-      <height>41</height>
+      <x>744</x>
+      <y>376</y>
+      <width>120</width>
+      <height>120</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">font: 28pt &quot;KoPubWorld돋움체 Medium&quot;;
-color: #45423C;
-background-color: rgba(0,0,0,0);</string>
-    </property>
-    <property name="text">
-     <string>채소류</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_11">
-    <property name="geometry">
-     <rect>
-      <x>784</x>
-      <y>400</y>
-      <width>80</width>
-      <height>80</height>
-     </rect>
+    <property name="font">
+     <font>
+      <family>KoPubWorld돋움체</family>
+      <weight>75</weight>
+      <bold>true</bold>
+      <pointsize>56</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 56pt &quot;KoPubWorld돋움체 Bold&quot;;
-color: #F9BC15;
+     <string notr="true">color: #F9BC15;
 background-color: rgba(0,0,0,0);
 border: 0px;</string>
     </property>
@@ -75,58 +64,54 @@ border: 0px;</string>
      <string>-</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="add_item_count">
     <property name="geometry">
      <rect>
-      <x>928</x>
-      <y>408</y>
-      <width>73</width>
-      <height>73</height>
+      <x>856</x>
+      <y>392</y>
+      <width>193</width>
+      <height>81</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>KoPubWorld돋움체</family>
+      <weight>75</weight>
+      <bold>true</bold>
+      <pointsize>56</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: 56pt &quot;KoPubWorld돋움체 Bold&quot;;
-color: #45423C;
+     <string notr="true">color: #45423C;
 background-color: rgba(0,0,0,0);
 </string>
     </property>
     <property name="text">
-     <string>3</string>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QPushButton" name="add_item_plus">
     <property name="geometry">
      <rect>
-      <x>648</x>
-      <y>112</y>
-      <width>145</width>
-      <height>81</height>
+      <x>1040</x>
+      <y>376</y>
+      <width>120</width>
+      <height>120</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">font: 56pt &quot;KoPubWorld돋움체 Bold&quot;;
-background-color: rgba(0,0,0,0);
-color: #45423C;</string>
-    </property>
-    <property name="text">
-     <string>양파</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_12">
-    <property name="geometry">
-     <rect>
-      <x>1072</x>
-      <y>400</y>
-      <width>80</width>
-      <height>80</height>
-     </rect>
+    <property name="font">
+     <font>
+      <family>KoPubWorld돋움체</family>
+      <weight>75</weight>
+      <bold>true</bold>
+      <pointsize>56</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 56pt &quot;KoPubWorld돋움체 Bold&quot;;
-color: #F9BC15;
+     <string notr="true">color: #F9BC15;
 background-color: rgba(0,0,0,0);
 border: 0px;</string>
     </property>
@@ -137,8 +122,8 @@ border: 0px;</string>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>656</x>
-      <y>216</y>
+      <x>640</x>
+      <y>256</y>
       <width>97</width>
       <height>41</height>
      </rect>
@@ -152,29 +137,11 @@ background-color: rgba(0,0,0,0);</string>
      <string>구매일</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>656</x>
-      <y>264</y>
-      <width>296</width>
-      <height>49</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 34pt &quot;KoPubWorld돋움체 Medium&quot;;
-color: #45423C;
-background-color: rgba(0,0,0,0);</string>
-    </property>
-    <property name="text">
-     <string>2021-07-15</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>976</x>
-      <y>216</y>
+      <x>960</x>
+      <y>256</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -188,25 +155,7 @@ background-color: rgba(0,0,0,0);</string>
      <string>유통기한</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>976</x>
-      <y>264</y>
-      <width>296</width>
-      <height>49</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 34pt &quot;KoPubWorld돋움체 Medium&quot;;
-color: #45423C;
-background-color: rgba(0,0,0,0);</string>
-    </property>
-    <property name="text">
-     <string>2021-07-20</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_14">
+   <widget class="QPushButton" name="add_item_next">
     <property name="geometry">
      <rect>
       <x>1008</x>
@@ -229,13 +178,13 @@ border-radius: 10px;</string>
      <string>다음</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="add_item_image">
     <property name="geometry">
      <rect>
       <x>24</x>
       <y>112</y>
       <width>592</width>
-      <height>400</height>
+      <height>457</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -245,8 +194,458 @@ border-radius: 10px;</string>
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="back_btn">
+    <property name="geometry">
+     <rect>
+      <x>-16</x>
+      <y>-8</y>
+      <width>120</width>
+      <height>120</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 0px; background-color: rgba(0,0,0,0);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normalon>img/back.png</normalon>
+     </iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_name">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>156</y>
+      <width>569</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>KoPubWorld돋움체</family>
+      <weight>75</weight>
+      <bold>True</bold>
+      <pointsize>56</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">text-align: left;
+color: #45423C;
+background-color: #FFFFFF;
+border: 0px;</string>
+    </property>
+    <property name="text">
+     <string>제품명</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_category">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>112</y>
+      <width>273</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 28pt &quot;KoPubWorld돋움체 Medium&quot;;
+color: #45423C;
+text-align: left;
+background-color: #FFFFFF;
+border: 0px;</string>
+    </property>
+    <property name="text">
+     <string>제품분류</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_createDay">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>304</y>
+      <width>296</width>
+      <height>48</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 34pt &quot;KoPubWorld돋움체 Medium&quot;;
+color: #45423C;
+text-align: left;
+background-color: #FFFFFF;
+border: 0px;</string>
+    </property>
+    <property name="text">
+     <string>2021-01-01</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_expDay">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>304</y>
+      <width>296</width>
+      <height>48</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 34pt &quot;KoPubWorld돋움체 Medium&quot;;
+color: #45423C;
+text-align: left;
+background-color: #FFFFFF;
+border: 0px;</string>
+    </property>
+    <property name="text">
+     <string>2021-01-01</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="voice_btn">
+    <property name="geometry">
+     <rect>
+      <x>1032</x>
+      <y>-16</y>
+      <width>120</width>
+      <height>120</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 0px; background-color: rgba(0,0,0,0);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normalon>img/voice.png</normalon>
+     </iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>56</width>
+      <height>56</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="barcode_btn">
+    <property name="geometry">
+     <rect>
+      <x>1152</x>
+      <y>-16</y>
+      <width>120</width>
+      <height>120</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 0px; background-color: rgba(0,0,0,0);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normalon>img/barcode.png</normalon>
+     </iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>64</width>
+      <height>64</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_1">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>512</y>
+      <width>177</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 24pt &quot;KoPubWorld돋움체 Medium&quot;;
+color:  #FFFFFF;
+background-color:  #F9BC15;
+border: 2px solid #F9BC15;
+border-radius: 26px;</string>
+    </property>
+    <property name="text">
+     <string> ±1</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_10">
+    <property name="geometry">
+     <rect>
+      <x>856</x>
+      <y>512</y>
+      <width>177</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 24pt &quot;KoPubWorld돋움체 Medium&quot;;
+color:  #F9BC15;
+background-color:  #FFFFFF;
+border: 2px solid #F9BC15;
+border-radius: 26px;</string>
+    </property>
+    <property name="text">
+     <string> ±10</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="add_item_100">
+    <property name="geometry">
+     <rect>
+      <x>1072</x>
+      <y>512</y>
+      <width>177</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 24pt &quot;KoPubWorld돋움체 Medium&quot;;
+color:  #F9BC15;
+background-color:  #FFFFFF;
+border: 2px solid #F9BC15;
+border-radius: 26px;</string>
+    </property>
+    <property name="text">
+     <string> ±100</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>back_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_back()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>55</x>
+     <y>61</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1</x>
+     <y>152</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_category</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_category()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>713</x>
+     <y>134</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1113</x>
+     <y>153</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_name</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_name()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>824</x>
+     <y>164</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>928</x>
+     <y>108</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_minus</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_minus()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>776</x>
+     <y>443</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>667</x>
+     <y>446</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_plus</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_plus()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1085</x>
+     <y>444</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1221</x>
+     <y>456</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_next</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_next()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1063</x>
+     <y>655</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>853</x>
+     <y>662</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_createDay</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_create()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>720</x>
+     <y>329</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>711</x>
+     <y>345</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_expDay</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_exp()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1046</x>
+     <y>338</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1006</x>
+     <y>365</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>voice_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_voice()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1099</x>
+     <y>49</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1086</x>
+     <y>117</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>barcode_btn</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_barcode()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1223</x>
+     <y>55</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1259</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_1</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_num()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>709</x>
+     <y>565</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>697</x>
+     <y>611</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_10</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_num()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>942</x>
+     <y>544</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>945</x>
+     <y>611</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>add_item_100</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_num()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1146</x>
+     <y>563</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1136</x>
+     <y>584</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>clicked_back()</slot>
+  <slot>clicked_next()</slot>
+  <slot>clicked_category()</slot>
+  <slot>clicked_name()</slot>
+  <slot>clicked_minus()</slot>
+  <slot>clicked_plus()</slot>
+  <slot>clicked_create()</slot>
+  <slot>clicked_exp()</slot>
+  <slot>clicked_voice()</slot>
+  <slot>clicked_barcode()</slot>
+  <slot>clicked_num()</slot>
+ </slots>
 </ui>
