--- a/device/GUI/h_start.ui
+++ b/device/GUI/h_start.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: #F2EDE7;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="title">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -37,7 +37,7 @@ color: rgb(241, 153, 32);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
       <x>368</x>
@@ -49,14 +49,14 @@ color: rgb(241, 153, 32);</string>
     <property name="font">
      <font>
       <family>제주고딕OTF</family>
-      <pointsize>32</pointsize>
+      <pointsize>28</pointsize>
       <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 32pt &quot;제주고딕OTF&quot;;
+     <string notr="true">font: 28pt &quot;제주고딕OTF&quot;;
 color: rgb(162, 157, 151);</string>
     </property>
     <property name="text">
@@ -66,28 +66,77 @@ color: rgb(162, 157, 151);</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>368</x>
+      <x>600</x>
+      <y>624</y>
+      <width>93</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 0px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>408</x>
       <y>544</y>
-      <width>545</width>
-      <height>80</height>
+      <width>465</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 32pt &quot;제주고딕OTF&quot;;
-color: rgb(162, 157, 151);</string>
+color: rgb(162, 157, 151); border: 0px;</string>
     </property>
     <property name="text">
      <string>▼</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_login()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>666</x>
+     <y>680</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>788</x>
+     <y>668</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>clicked_login()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>739</x>
+     <y>572</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>955</x>
+     <y>578</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>clicked_login()</slot>
+ </slots>
 </ui>
