--- a/frontend/src/components/Calendar/Dates/index.css
+++ b/frontend/src/components/Calendar/Dates/index.css
@@ -7,3 +7,7 @@
 border: calc(
   var(--fc-daygrid-event-dot-width, 8px) / 2) solid 
   var(--fc-event-border-color, #F19920); }
+
+.calender { 
+  overflow: "hidden",
+}
