--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,42 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@font-face {
+/* @font-face {
   font-family: 'KoPubWorld Light';
   font-style: normal;
   src: url(./styles/font/KoPubWorld-Dotum-Light.ttf) format('truetype')
@@ -53,7 +18,7 @@
 @font-face {
   font-family: 'KoPubWorld Bold';
   font-style: normal;
-  /* font-weight: Bold; */
+  font-weight: Bold;
   src: url(./styles/font/KoPubWorld-Dotum-Bold.ttf) format('truetype')
 }
 
@@ -64,7 +29,7 @@
   src: url(./styles/font/munhwajae-regular.ttf) format('truetype')
 }
 
-/* @font-face {
+@font-face {
   font-family: 'Munhwajae';
   font-style: normal;
   font-weight: bold;
